# cbcflow

./: .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  MANIFEST.in  README.md  cbc-meta-data-example.json  cbc-meta-data-schema.json  cbc-meta-data.schema  cbcflow.py  cbcflow_edit.out  coverage.xml  pytest.out  requirements.txt  setup.cfg  setup.py  versioneer.py
docs/: Makefile  actionitems.rst  command-line-usage.rst  conf.py  configuration.rst  gwosc.rst  index.rst  libraries.rst  metadata.rst  requirements.txt  usage-for-scripting.rst  usage.rst
docs/schema_visualization/: cbc-meta-data-schema.html
docs/source/: asimov.rst  building-blocks.rst  cbcflow-git-merging.rst  command-line-general.rst  command-line-update.rst  command-line-usage.rst  conf.py  configuration.rst  development-setup.rst  gwosc.rst  index.rst  library-index-labelling.rst  library-indices.rst  library-setup-from-scratch.rst  local-library-copy-setup.rst  metadata.rst  monitor-usage.rst  python-api-basics.rst  python-api-libraries.rst  python-api-update-metadata.rst  reading-the-schema.rst  updating-metadata-from-the-command-line.rst  updating-metadata-with-the-python-api.rst  usage-for-scripting.rst  what-is-metadata.rst
docs/source/api/: cbcflow.cbcflow.from_file.rst  cbcflow.cbcflow.main.rst  cbcflow.cbcflow.rst  cbcflow.configuration.get_cbcflow_config.rst  cbcflow.configuration.rst  cbcflow.database.GraceDbDatabase.rst  cbcflow.database.LibraryParent.rst  cbcflow.database.LocalLibraryDatabase.rst  cbcflow.database.rst  cbcflow.get_superevent.rst  cbcflow.gracedb.fetch_gracedb_information.rst  cbcflow.gracedb.rst  cbcflow.metadata.MetaData.rst  cbcflow.metadata.rst  cbcflow.monitor.generate_crondor.rst  cbcflow.monitor.rst  cbcflow.monitor.run_monitor.rst  cbcflow.parser.build_parser_from_schema.rst  cbcflow.parser.get_parser_and_default_data.rst  cbcflow.parser.process_property.rst  cbcflow.parser.rst  cbcflow.process.fill_linked_files_if_necessary.rst  cbcflow.process.rst  (+19 more)
examples/: initial_example.md
schema/: cbc-meta-data-v1.schema  cbc-meta-data-v2.schema  cbc-meta-data-v3.schema  index-v1.schema
src/cbcflow/: __init__.py  _version.py  asimov.py  cbcflow.py  configuration.py  database.py  gracedb.py  metadata.py  monitor.py  oldprocess.py  online_pe.py  parser.py  pe_scraper.py  process.py  schema.py  utils.py
src/cbcflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: cbc-meta-data-example.json  test_database.py  test_gracedb.py  test_merging.py  test_metadata.py  test_schema.py  update_json_1.json  update_json_2.json  update_yaml_1.yaml  update_yaml_2.yaml
tests/files_for_testing/: cbc-meta-data-example.json
tests/library_for_testing/: S230227hp-cbc-metadata.json  S230331e-cbc-metadata.json  S230401h-cbc-metadata.json  S230402dv-cbc-metadata.json  S230403ae-cbc-metadata.json  S230404hb-cbc-metadata.json  S230404jc-cbc-metadata.json  library.cfg
(+17 files in other folders)
