[metadata]
name = cbcflow
version = 0.0.1
author = Gregory Ashton
author_email = gregory.ashton@ligo.org
description = A tool for managing the workflow of CBC data product
long_description = file: README.md
long_description_content_type = text/markdown
url = TBD
project_urls =
    Bug Tracker = TBD
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cbcflow = cbcflow:main
