[metadata]
name = cbcflow
version = 0.1.0
author = Gregory Ashton
author_email = gregory.ashton@ligo.org
description = A tool for managing the workflow of CBC data product
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ligo.org/cbc/meta-data
project_urls =
    Bug Tracker = https://git.ligo.org/cbc/meta-data/-/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    argcomplete
    jsonschema
    jsondiff
    ligo-gracedb
    pygit2
    lscsoft-glue
    json-schema-for-humans
    coverage
    python-benedict
    jsonmerge


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    cbcflow = cbcflow:main
    cbcflow_from_file = cbcflow:from_file
    monitor_make = cbcflow:generate_crondor
    monitor_run = cbcflow:run_monitor

[flake8]
exclude = .git,docs,build,dist,test,*__init__.py,*_version.py, versioneer.py
max-line-length = 120
ignore = E129 W504 W503 E203

[tool:pytest]
addopts = -p no:warnings

[versioneer]
VCS = git
style = pep440
versionfile_source = src/cbcflow/_version.py
versionfile_build = cbcflow/_version.py
tag_prefix =
